# azooKey-Windows

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: actions.yml
.zed/: settings.json
crates/client/src/: engine.rs  globals.rs  lib.rs  trace.rs  tsf.rs
crates/client/src/engine/: client_action.rs  composition.rs  engine_result.rs  full_width.rs  input_mode.rs  ipc_service.rs  state.rs  text_util.rs  theme.rs  user_action.rs
crates/client/src/tsf/: action_handler.rs  composition_sink.rs  display_attribute.rs  edit_session.rs  factory.rs  key_event_sink.rs  language_bar.rs  surrounded_text.rs  text_input_proccesor.rs  text_layout_sink.rs  text_service.rs  text_service_inner.rs  thread_mgr_event_sink.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  watcher.rs
crates/shared/: Cargo.toml  service.proto
crates/shared/src/: ime.rs  lib.rs
crates/shared/tests/: composition_contract_lock.rs  grimodex_ime.rs
crates/ui/src/: main.rs
docs/: develop.md  todo.md  tsf-ime-architecture-overhaul.md
frontend/: package-lock.json
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: ipc.rs  lib.rs
frontend/src/pages/: zenzai.tsx
installer/: Azookey Startup.xml  CodeDependencies.iss  Installer.iss
scripts/: script.bat
server-swift/: Package.resolved  Package.swift
server-swift/Sources/azookey-server/: azookey_server.swift
server-swift/Sources/ffi/include/: ffi.h
src/macros/src/: lib.rs
src/tsf-core/: Cargo.toml
src/tsf-core/res/: res.h
src/tsf-core/src/: engine.rs  extension.rs  globals.rs  lib.rs  register.rs  trace.rs  tsf.rs
tests/composition-behavior-v1/: gap-matrix.json
(+17 files in other folders)
