[package]
name = "azookey-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
shared = { path = "../shared" }
async-stream = "0.3.6"
futures-core = "0.3.31"
serde_json = "1"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
