[package]
name = "shared"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
prost = "0.13.4"
tonic = "0.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
]

[build-dependencies]
tonic-build = "0.12.3"
